# faithful-stylist

./: .dockerignore  .env.example  .gitattributes  .gitignore  DEMO.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
app/: __init__.py  main.py  state.py
app/templates/: index.html
core/: __init__.py  config.py  embed.py  enrich.py  grounding.py  image_embed.py  llm.py  models.py  pipeline.py  profile.py  rationale.py  rerank.py  retrieve.py  store.py  textparse.py  visual.py  vocab.py
core/ingest/: __init__.py  images.py  scrape.py  synthetic.py
data/fixtures/: briefs.json  catalog.json
eval/: __init__.py  briefs.py  harness.py  judge.py  real_run.json  record.py  visual_eval.py  visual_run_clip.json  visual_run_color.json
tests/: conftest.py  test_api.py  test_cache.py  test_cassette.py  test_embed.py  test_enrich.py  test_eval.py  test_fixture_loads.py  test_grounding.py  test_health.py  test_models.py  test_pipeline.py  test_profile.py  test_retrieve.py  test_scrape.py  test_textparse.py  test_unmet_preference.py  test_visual.py
